src/style.scss
// Reset
*,
*::before,
*::after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

// Variables
$olive-00: #f6f2e8;
$olive-01: #d6cdb8;
$olive-02: #b2a893;
$olive-03: #988d78;
$olive-04: #7e725f;
$japonica-00: #fba899;
$japonica-01: #e28272;
$japonica-02: #ca6556;
$japonica-03: #b04b3d;
$font-stack:
  "Work Sans",
  -apple-system,
  BlinkMacSystemFont,
  "Segoe UI",
  Roboto,
  Oxygen,
  Ubuntu,
  Cantarell,
  sans-serif;

// Mixins
@mixin centered-column {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  img {
    max-width: 100%;
    height: auto;
  }
}

@mixin centered-row {
  display: flex;
  justify-content: center;
  align-items: center;
  max-width: 100%;
  gap: 1rem;
  img {
    object-fit: cover;
    flex: 1;
    width: 0;
  }
}

@mixin responsive($breakpoint) {
  @if $breakpoint == mobile {
    @media (max-width: 425px) {
      @content;
    }
  }
  @if $breakpoint == tablet {
    @media (max-width: 767px) {
      @content;
    }
  } @else if $breakpoint == laptop {
    @media (max-width: 1023px) {
      @content;
    }
  }
}

// Base styles
html {
  font-size: 18px;
  line-height: 1.5;
  scroll-behavior: smooth;
  @include responsive(mobile) {
    font-size: 16px;
  }
}

body {
  font-family: $font-stack;
  color: $japonica-01;
  background-color: $olive-00;
  padding: 3rem;
  @include responsive(mobile) {
    padding: 1rem;
  }
}

h1 {
  font-size: 3rem;
  font-weight: 400;
  @include responsive(tablet) {
    font-size: 2.2rem;
  }
}

h2 {
  font-size: 2rem;
  font-weight: 300;
  @include responsive(tablet) {
    font-size: 1.6rem;
  }
}

h3 {
  font-weight: 300;
  margin: 0.6rem 0;
}

p,
figcaption,
li {
  margin-bottom: 1rem;
  color: $olive-02;
  font-weight: 300;
}

figcaption {
  text-align: center;
}

blockquote {
  margin: 0 1rem;
  padding: 1rem;
  background-color: $olive-02;
  color: $olive-00;
  margin-bottom: 1rem;
}

// Utilities
.text-center {
  text-align: center;
}

.centered-column {
  @include centered-column();
}

.centered-row {
  @include centered-row();
}

.section-heading {
  margin-bottom: 3rem;
  margin-top: 6rem;
  @include centered-row();
}

.gallery {
  display: grid;
  padding: 0 4rem;
  grid-template-columns: 1fr 1fr 1fr;
  .thumbnail {
    margin: 1rem;
    height: 250px;
    // background-color: #b04b3d;
    cursor: pointer;
    overflow: hidden;
    img {
      object-fit: cover;
      width: 100%;
      height: 100%;
      transition: 0.3s;
      &:hover {
        transform: scale(1.3);
        transform-origin: 50% 50%;
      }
    }
  }
  // Mobile and Tablet styling
  @include responsive(tablet) {
    @include centered-column();
    padding: 0;
    .thumbnail {
      height: 200px; // Change from auto to fixed height
      width: 100%;
      img { 
        width: 100%;
        height: 100%;
        object-fit: cover;
        object-position: center;
      }
    }
  }
}

.project-card {
  position: relative; /* Ensure positioning for the pseudo-element */
  display: flex; /* Aligns content within the card */
  flex-direction: row; /* Places the text and image side-by-side */
  justify-content: space-around; /* Ensures space between text and image */
  align-items: center; /* Vertically aligns content */
  padding: 2rem;
  border: 1px solid $japonica-00; /* Matches the soft red border */
  margin: 2rem 4rem;
  background-color: $olive-00; /* Fallback background color */

  // Mobile and Tablet styling
  @include responsive(tablet) {
    flex-direction: column;
    margin: 1rem 1rem;
    img {
      width: 100%;
    }
  }

  // Pseudo-element for background image
  &::before {
    content: ""; /* Required for pseudo-elements */
    position: absolute; /* Position it absolutely within the card */
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-image: url("./media/paint_texture.png");
    background-size: cover; /* Cover the entire area */
    background-position: center; /* Center the image */
    opacity: 0; /* Start with 0 opacity */
    transition: 0.1s ease-in; /* Smooth transition for opacity */
    z-index: 0; /* Place it behind the content */
    mix-blend-mode: luminosity;
  }

  .project-text {
    @include centered-column();
    flex: 3; /* Allows text to take up available space */
    z-index: 1; /* Ensure text is above the background */
    h2 {
      margin: 0;
    }
    p {
      max-width: 70%;
      font-size: 1rem;
      margin-top: 5px;
      text-align: center;
    }
  }

  img {
    z-index: 2;
    position: relative;
  }

  // hover
  &:hover::before {
    opacity: 0.3; /* Change opacity on hover */
  }

  &:hover {
    cursor: pointer;
    border-color: $japonica-02;
    color: $japonica-02;
  }
}

/* Overlay container */
.project-overlay {
  display: none; /* Hidden by default */
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: #7e725f89; /* Semi-transparent background */
  z-index: 1000; /* Ensures it's above other content */
  align-items: center;
  justify-content: center;
}

/* Overlay content */
.overlay-panel {
  position: relative;
  background: $olive-00;
  padding: 2rem 5rem;
  overflow: auto;
  overscroll-behavior: contain;
  max-width: 70%;
  max-height: 70%;
  // box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
  font-weight: 400;
  p {
    color: $olive-03;
  }
  figure {
    margin: 0.9rem;
    img {
      width: 100%;
    }
  }
}

/* Close button */
.fixed-wrapper {
  position: absolute;
  top: 1rem;
  left: 1rem;
}
.close-overlay {
  position: fixed;
  // top: 1rem;
  // left: 1rem;
  background-color: transparent;
  color: $japonica-01;
  padding: 10px 20px;
  border: none;
  cursor: pointer;
  i {
    font-size: x-large;
  }
  &:hover {
    color: $japonica-03;
  }
}

.grid {
  display: grid;
  gap: 1rem;
  img {
    width: 100%;
    height: 100%;
    object-fit: cover;
  }
}

.two-columns {
  grid-template-columns: 1fr 1fr;
}

.funky-grid-1 {
  grid-template-columns: 1fr 1fr 1fr;
  grid-auto-rows: minmax(150px, auto);
  align-items: center;
  :nth-child(1) {
    grid-column: 1 / 3;
    grid-row: 1 / 3;
  }
  :nth-child(2) {
    grid-column: 3 / 4;
    // grid-row: 1 / 3;
  }
}

// Contact details

.contact-detail {
  display: flex;
  align-items: center;
  justify-content: start;
  gap: 1rem;
  i,
  h3 {
    font-size: 2.4rem;
    @include responsive(tablet) {
      font-size: 1.6rem;
    }
  }
}

.contact-section {
  display: flex;
  flex-direction: column;
  // align-items: center;
  justify-self: center;
  width: min-content;
  // align-items: center;
}

.mt {
  margin-top: 2rem;
}
.mt-4 {
  margin-top: 4rem;
}
.mb {
  margin-bottom: 2rem;
}
.mb-4 {
  margin-bottom: 4rem;
}
.mr {
  margin-right: 2rem;
}
.ml {
  margin-left: 2rem;
}

.float-r {
  float: right;
}
.float-l {
  float: left;
}

.contain-img-height-180 {
  img {
    object-fit: cover;
    height: 180px;
  }
}

.contain-img-height-220 {
  img {
    object-fit: cover;
    height: 220px;
  }
}

.img-height-180 {
  object-fit: contain;
  height: 180px;
}

.img-height-220 {
  object-fit: contain;
  height: 220px;
}

.img-height-420 {
  object-fit: contain;
  height: 420px;
}

// ID selectors
#title-block {
  margin-bottom: 1rem;
  line-height: 1.15;
  h2 {
    color: $olive-02;
  }
  @include responsive(tablet) {
    margin-top: 1rem;
    text-align: center;
  }
}

#main-links {
  height: 55vh;
  line-height: 2;
}

#contact-icons {
  font-size: 40px;
  i {
    margin: 0.8rem;
  }
}

// pseudo-state styling
a {
  text-decoration: none;
  color: $japonica-01;
  &:hover {
    color: $japonica-03;
  }
}

